-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.9.1, 0.9.2
-
Fix Version/s: 0.9.3
-
Component/s: C++ - Library
-
Labels:
-
Environment:
ubuntu 14.04 LTS
gcc 4.8
-
Patch Info:Patch Available
Communications between THttpServer in cpp lib and nodejs http client caused unexpected ECONNRESET. This was caused by nodejs client setting "Content-length" instead of "Content-Length" in the header field, causing THttpServer to terminate the request prematurely.
Per HTTP specification, header field name is case insensitive, therefore this patch used case insensitive match to identify "Content-Length" field.