THRIFT-2858 Enable header field case insensitive match in THttpServer

Client: cpp
Patch: YI-HUNG JEN